--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "quotes": 0
+      "quotes": 0,
+      "no-restricted-syntax": 0
     }
   },
   "browserslist": [
